upd code : api wrapper full case + test